--- a/Weihao_Li_presentation/Assignment_4_Weihao_Li_prensentation.html
+++ b/Weihao_Li_presentation/Assignment_4_Weihao_Li_prensentation.html
@@ -109,9 +109,9 @@ Department of Econometrics and Business Statistics
 ##Help
 
 3. Fix issues
-  - .bib file
-  - cross-refences syntax
-  - plots labels
+  - .bib file (Do not put ',' before the last '}')
+  - cross-refences syntax (\@ref() or &lt;code&gt;\ref{}&lt;/code&gt;)
+  - plots labels (Use ggplot instead of plot.relimplm() method )
 4. Format the final report
 
 ]
@@ -138,17 +138,21 @@ Department of Econometrics and Business Statistics
 ]
 ---
 # Tools
+.font_my[
+
 ## R Markdown
 - Template: MonashEBSTemplates (https://github.com/robjhyndman/MonashEBSTemplates)
+- Control floating objects: flafter (Latex package)
+- APA citation style
 
 ## Version Control
 - Git bash
   - almost everything
-- Gitraken
+- GitKraken
   - Stage file
   - View tree diagram
   - Check project progress in Boards
-
+]
 
 ---
 
@@ -174,6 +178,8 @@ Slides produced using [Rmarkdown](https://github.com/rstudio/rmarkdown) with [xa
 
 &lt;br&gt; 
 &lt;a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.en.html"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://www.gnu.org/graphics/gplv3-with-text-136x68.png" /&gt;&lt;/a&gt;&lt;br /&gt;This work is licensed under a &lt;a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.en.html"&gt;GNU General Public License v3.0&lt;/a&gt;.
+
+## Any Questions?
 
 .bottom_abs.width100[
 
